Fix SR-5614, add check if importType succeds

SwiftDeclConverter::importSwiftNewtype now check if the
storedUnderlyingType is null and return a nullptr